# appeals-monitor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci-cd.yml  deploy-kobo-form.yml  deploy-logic-app.yml
appeals_monitor/: __init__.py  __main__.py  analysis.py  config.py  etl.py  logger.py  models.py  monitor.py  notify.py  secrets.py  storage.py
appeals_monitor/prompts/: analysis.md
appeals_monitor/templates/: email_summary.md
infra/: logic-app.json  logic-app.parameters.json  logic_app.yaml
kobo/: appeals_monitor_subscription.xlsx
tests/: test_pipeline.py
