[project]
name = "appeals-monitor"
version = "0.1.0"
description = "IFRC Appeal Document Monitor - extracts structured info from IFRC GO appeal documents using LLM agents"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "docling>=2.0.0",
    "pypdfium2>=4.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "pydantic>=2.0.0",
    "sendgrid>=6.0.0",
    "jinja2>=3.1.0",
    "azure-storage-blob>=12.0.0",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

[project.scripts]
appeals-monitor = "appeals_monitor.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "requests-mock>=1.11.0",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }
